--- a/styles/index.css
+++ b/styles/index.css
@@ -51,8 +51,6 @@ nav a:hover {
   font-family: Fira Sans;
   font-size: 24px;
   font-weight: 500;
-  line-height: 100%;
-  letter-spacing: 0%;
 }
 
 .bannar h1 {
@@ -75,4 +73,34 @@ nav a:hover {
   font-size: 18px;
   font-weight: 600;
   text-decoration: none;
+}
+
+.pillars {
+  width: 1280px;
+  height: 324px;
+  margin: 80px 0;
+}
+
+.pillars h1 {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 32px;
+}
+
+.pillars-card-group {
+  display: flex;
+  justify-content: space-between;
+}
+
+.pillars-card {
+  width: 302px;
+  height: 244px;
+  padding: 24px;
+  box-sizing: border-box;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 16px;
+  background: rgba(255, 255, 255, 1);
+}
+.pillars-card h2{
+  margin: 14px 0 28px 0;
 }
