--- a/styles/index.css
+++ b/styles/index.css
@@ -326,11 +326,11 @@ nav a:hover {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  gap: 32;
   padding: 0 48px;
   border-radius: 24px;
   background: rgba(255, 255, 255, 1);
 }
+
 .news-2 {
   width: 1184px;
   height: 402px;
@@ -339,11 +339,11 @@ nav a:hover {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  gap: 32;
   padding: 0 48px;
   border-radius: 24px;
   background: rgba(255, 255, 255, 1);
 }
+
 .news-3 {
   width: 1184px;
   height: 402px;
@@ -352,7 +352,6 @@ nav a:hover {
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
-  gap: 32;
   padding: 0 48px;
   border-radius: 24px;
   background: rgba(255, 255, 255, 1);
@@ -372,8 +371,8 @@ nav a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  gap: 32;
 }
+
 .news-content-2 {
   margin: 0 32px 0 0;
 }
@@ -403,13 +402,9 @@ nav a:hover {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0%;
-  text-align: left;
 }
 
 .news-content a {
-  /* width: 139px;
-  height: 48px; */
   padding: 13px 26px 13px 26px;
   border-radius: 8px;
   background: rgba(0, 106, 80, 1);
@@ -418,4 +413,66 @@ nav a:hover {
   font-size: 18px;
   font-weight: 600;
   margin-top: 32px;
+}
+
+.donate {
+  width: 1140px;
+  height: 464px;
+  margin: 80px auto;
+  text-align: center;
+}
+
+.donate h1 {
+  color: rgba(14, 14, 14, 1);
+  font-family: Fira Sans;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.donate p {
+  color: rgba(14, 14, 14, 0.7);
+  font-family: Fira Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  margin: 24px 0 32px 0;
+}
+
+.donate button {
+  height: 128px;
+  padding: 40px;
+  box-sizing: border-box;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 16px;
+  background: rgba(255, 255, 255, 1);
+  color: rgba(14, 14, 14, 0.8);
+  font-size: 40px;
+  font-weight: 700;
+  margin: 0 12px;
+}
+
+#other-amount {
+  width: 1032px;
+  height: 64px;
+  padding: 20px 40px 20px 40px;
+  text-align: center;
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid rgba(14, 14, 14, 0.15);
+  background: rgba(255, 255, 255, 1);
+  color: rgba(14, 14, 14, 0.3);
+  font-size: 20px;
+  font-weight: 400;
+  margin: 32px 0;
+}
+
+#donate-button {
+  padding: 17px 34px 17px 34px;
+  box-sizing: border-box;
+  border: 1px solid rgba(14, 14, 14, 0.1);
+  border-radius: 8px;
+  background: rgba(0, 106, 80, 1);
+  color: rgba(255, 255, 255, 1);
+  font-size: 18px;
+  font-weight: 600;
 }
